--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <title>Golden Raspberry Awards | Texto IT</title>
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,700;1,100;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
